ipc/ipdl/test/ipdl/error/syncMessageCompress.ipdl
//error: message `foo' in protocol `syncMessageCompress' requests compression but is not async

sync protocol syncMessageCompress {
parent:
    sync foo() compress;
};
